--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Cyrus GNIMADI</h1>
+            <div><a href="mailto:gnimadicyrus@gmail.com">your-email@example.com</a></div>
             
             <section class="box">
                 <h2>
