--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <article class="box">
-            <h1>Cyrus GNIMADI</h1>
+            <h1>Cyrus Steve Dona GNIMADI</h1>
             <div><a href="mailto:gnimadicyrus@gmail.com">your-email@example.com</a></div>
             
             <section class="box">
