--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Cyrus Steve Dona GNIMADI</h1>
-            <div><a href="mailto:gnimadicyrus@gmail.com">your-email@example.com</a></div>
+            <div><a href="mailto:gnimadicyrus@gmail.com">gnimadicyrus@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/cyrgmd">github</a></li>
+                    <li><a href="https://linkedin.com/in/cyrus-gnimadi-🛡%EF%B8%8F-901086165">linkedin</a></li>
+                    <li><a href="https://twitter.com/CyrusGnimadi">twitter</a></li>
                 </ul>    
             </section>
             
@@ -35,8 +35,8 @@
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>ESGI</li>
+                        <li>2022</li>
                     </ul>
                 </div>
             </section>
