--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,13 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>How to use vscode</li>
+                    <li>Github notions</li>
+                </ul>
+                <h3>Security Engineer</h3>
+                <ul>
+                    <li>Pentest</li>
+                    <li>Digital Forensics</li>
                 </ul>
             </section>
             <section class="box">
@@ -88,8 +93,8 @@
                 <h3>Great hackathon</h3>
                 <div>This was a great hack!</div>
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>Hackerlab</li>
+                    <li>Finalist of CTF</li>
                 </ul>
             </section>
         </article>
